Pokedex/Pokedex/wwwroot/css/main.css
.pokemonListPicture {
  width: 150px;
  height: 150px;
  -o-object-fit: contain;
  object-fit: contain;
  margin: 5px
}

#importedTeams {
  height: 70%;
}

.siteFeatures img {
  height: 10rem;
  width: auto;
  object-fit: contain;
  border-radius: 3px;
  cursor: pointer;
  transition: 0.3s;
}

.siteFeatures img:hover {
  opacity: 0.7;
}

.siteFeatures a {
  color: black;
}

.siteFeatures a:hover {
  color: #007bff;
}

.modal {
  padding-top: 100px;
  background-color: rgba(0,0,0,0.9);
}

.modalImage {
  margin: auto;
  display: block;
  max-width: 90%;
  max-height: 85%;
  object-fit: contain;
  border: black 1px solid;
  border-radius: 5px;
}

.modalPreview {
  border: 2px black solid;
}

.modalDescription {
  max-width: 800px;
}

.modalCaption, .modalDescription {
  margin: auto;
  display: block;
  width: 90%;
  text-align: center;
  color: #ccc;
  padding-bottom: 5px;
}

.modalImage, .modalCaption, .modalDescription {
  animation-name: zoom;
  animation-duration: 0.6s;
}

@keyframes zoom {
  from {transform:scale(0)}
  to {transform:scale(1)}
}

.close {
  position: absolute;
  top: 60px;
  right: 25px;
  color: white;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

@media only screen and (max-width: 700px){
  .modalImage {
    width: 100%;
  }
} 

.siteFeatures {
  display: flex;
  flex-wrap: wrap;
}

.siteFeatures div {
  display: inline-block;
}

.feature {
  margin: 5px;
}

.newMessageCount {
  display: inline-block;
  color: rgb(255, 255, 255);
  background-color: gray;
  border: 1px gray solid;
  border-radius: 4px;
  height: 30px;
  padding: 0 5px;
}

.column {
  float: left;
}

.column a {
  float: none;
  color: black;
  text-decoration: none;
  display: block;
  text-align: left;
}

.column a:hover {
  background-color: #ddd;
}

.addPokemonImage {
  padding-left: 0
}

.accountOptionHeader {
  margin-left: 10px
}

.teamButtons .btn {
  margin-bottom: .25rem
}

#search {
  width: 10rem;
}

.generatorSection {
  min-width: 125px
}

.grid-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: gray;
  padding: 7.5px 10px;
  width: 100%;
}

.grid-container>div {
  padding: 2.5px;
  margin: 2.5px;
  background-color: rgba(255, 255, 255, 0.8);
  border: 1px solid black;
  text-align: center;
  font-size: 1rem;
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -ms-flex-preferred-size: 20%;
  flex-basis: 15%
}

.grid-container .typing {
  font-size: 0
}

.grid-container .typing div {
  margin: 0 2.5px 5px;
  width: 45%;
  max-width: 150px
}

.pokemonName {
  color: black
}

.pokemonName:hover {
  color: blue
}

.fixed-nav {
  top: 0;
  width: 100%;
  z-index: 500;
  position: -webkit-sticky;
  position: sticky
}

.nav-scroll {
  max-height: 296px;
  overflow-y: scroll
}

.attemptCounter {
  padding: 0;
  height: 30px;
  width: 30px
}

hr.dropdown-line {
  margin: .25rem 0
}

.dropdown-menu {
  min-width: auto
}

.check-box {
  width: auto
}

.collapse-button {
  margin: 5px 0
}

.collapse-button:focus {
  outline: 0
}

.search-bar input, .search-bar .search-button, .search-bar .reset-button {
  list-style: none;
  padding: .25rem 0;
  border-radius: 4px;
  line-height: 1rem;
  height: 1.75rem;
  text-align: center
}

.search-bar .search-button, .search-bar .reset-button {
  width: 75px
}

.search-bar input, .search-bar .reset-button {
  background-color: #fff
}

.search-bar input {
  border: 1px solid #dbdbdb;
  color: #404040
}

.reset-button:hover {
  color: black
}

.reset-button {
  color: gray;
  margin-left: 5px
}

.search-bar {
  height: 30px;
  margin: 15px 0 10px 0
}

.statData {
  width: 150px
}

main {
  padding: 0 5px !important;
  margin: 0 0 40px
}

.shadowed img {
  -webkit-filter: drop-shadow(2px 2px 2px #222);
  filter: url("data:image/svg+xml;utf8,<svg height='0' xmlns='http://www.w3.org/2000/svg'><filter id='drop-shadow'><feGaussianBlur in='SourceAlpha' stdDeviation='5'/><feOffset dx='2' dy='2' result='offsetblur'/><feFlood flood-color='rgba(2,2,2,1)'/><feComposite in2='offsetblur' operator='in'/><feMerge><feMergeNode/><feMergeNode in='SourceGraphic'/></feMerge></filter></svg>#drop-shadow");
  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=2, OffY=2, Color='#222')";
  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=2, OffY=2, Color='#222')";
}

.lightshadowed {
  height: 3.5rem;
  width: 3.75rem;
  -o-object-fit: contain;
  object-fit: contain;
  padding: .125rem;
  -webkit-filter: drop-shadow(0.5px 0.5px 0.5px #222) !important;
  filter: url("data:image/svg+xml;utf8,<svg height='0' xmlns='http://www.w3.org/2000/svg'><filter id='drop-shadow'><feGaussianBlur in='SourceAlpha' stdDeviation='1'/><feOffset dx='0.5' dy='0.5' result='offsetblur'/><feFlood flood-color='rgba(2,2,2,1)'/><feComposite in2='offsetblur' operator='in'/><feMerge><feMergeNode/><feMergeNode in='SourceGraphic'/></feMerge></filter></svg>#drop-shadow") !important;
  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0.5, OffY=0.5, Color='#222')" !important;
  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0.5, OffY=0.5, Color='#222')" !important;
}

.accountDropdown .dropdown-item {
  padding: 0 1.5rem !important
}

.differentForms, .differentFormsMobile {
  padding-top: 5px
}

.differentForms .formButtons, .differentFormsMobile .formButtons {
  width: 318px
}

.differentForms button, .differentFormsMobile button {
  background: 0;
  border: 0;
  cursor: pointer;
  overflow: hidden;
  outline: 0;
  padding: 0;
}

.table tbody tr:first-of-type * {
  border-top-width: 0;
  padding-bottom: 10px;
  font-size: 1rem
}

.pokemonTeamGroup {
  position: relative;
  display: -ms-inline-flexbox;
  display: -webkit-inline-box;
  display: inline-flex;
  padding-bottom: 0 !important
}

.pokemonTeamDropdown {
  border-top-width: 1px !important
}

.pokemonTeamDropdown li {
  padding-bottom: 0 !important
}

.pokemonTables, .typing {
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.pokemonTables table {
  width: 100%
}

.effectivenessChart {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex
}

.StrongAgainst, .WeakAgainst {
  margin-right: 1rem
}

.effectivenessChart table tbody tr:first-of-type td {
  padding-top: 5px
}

.noRowBorders td {
  border-width: 0
}

.noRowBorders table tbody tr:first-of-type td {
  border-top-width: 1px
}

.teamRandomizerTable td {
  border-width: 0
}

.generationOptionSeparator, .adminOptionSeparator {
  margin: 5px 0;
  border-top-width: 1px !important;
  padding: 0 !important
}

.generationOptionTitle {
  margin-left: 5px
}

.generatorDropdown {
  margin-top: -15px
}

.generatorDropdown, .generatorButton, .exportTeamButton, .saveTeamButton {
  height: 50px
}

.generatorOptionTitle, .adminMenuTitle {
  padding-left: 5px
}

.teamRandomizer:hover .dropdown-menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex
}

.dropdown-menu {
  margin-top: 0
}

label {
  margin-bottom: 0
}

.pokemonInfo {
  width: 24.5rem
}

.pokemonImage img {
  width: 327px;
  height: 327px;
  -o-object-fit: contain;
  object-fit: contain;
}

.pokemonPicture img {
  display: block;
  margin-left: auto;
  margin-right: auto
}

.previousPokemon, .nextPokemon {
  width: 50%;
}

.previousPokemon, .previousPokemon table {
  float: left
}

.nextPokemon, .nextPokemon table {
  float: right
}

.evolutionPokemon {
  width: 100%
}

.evolutionPokemon a, .evolutionPokemon a:hover {
  color: grey !important;
  text-decoration: none
}

.hide {
  display: none
}

.pokemonTeamPokemon {
  width: 3rem;
  -o-object-fit: contain;
  object-fit: contain;
}

.pokemonTeamPicture {
  display: inline-block;
  text-align: center;
}

.teamButton {
  margin-bottom: 6px;
}

.addNextButton {
  margin-left: 5px
}

.pokemonTeamPokemonTable {
  margin: -10px
}

.evolutionPokemon img {
  margin: 0 -10px
}

.evolutionPokemon a, .evolutionPokemon span {
  padding: 0 10px;
}

h2 {
  font-size: 1.5rem;
  font-weight: bold
}

.effectivenessChart table td, .evolutions td {
  padding: 0
}

.generatorPicture {
  padding: 10px
}

.baseStatTable td, .evYieldTable td {
  padding-left: 10px;
  padding-bottom: 5px
}

.baseStatTable th {
  font-size: 1rem !important
}

.pokemonTables {
  padding: .25rem 1rem;
}

.pokemonTables th {
  width: 1px;
  white-space: nowrap
}

.pokemonStats .statBar {
  border: 1px solid black
}

.pokemonStats tr td:last-child {
  text-align: right
}

.pokemonStats .statBar {
  height: 20px;
  min-width: 3px
}

.tableWithHeaders thead th {
  width: auto;
  color: #212529;
  text-align: left;
  padding: 0;
  white-space: nowrap;
  border-top-width: 0;
}

.evolutions thead tr h2 {
  margin-top: -4px;
  margin-bottom: 4px
}

.evolutions tbody th:first-child {
  padding-right: 10px
}

.evolutions thead th:first-of-type {
  min-width: 155px
}

.evolutions tbody th {
  text-align: left
}

.evolutions thead th:last-child {
  width: 100%
}

.evolutions tbody th {
  font-size: 1rem
}

.maleRatio {
  color: #3273dc
}

.femaleRatio {
  color: #ff6bce
}

.teamRandomizer .generatorPicture {
  text-align: center
}

.generatorButton, .exportTeamButton, .saveTeamButton {
  margin: 0 5px 15px 0
}

a {
  outline: 0
}

.typingSelectList {
  width: 200px
}

.incomplete {
  background-color: rgba(255, 0, 0, 0.8) !important
}

.review {
  background-color: rgba(0, 255, 0, 0.8) !important
}

.flexDiv {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex
}

.slider {
  padding: 0;
}

.primaryList {
  margin-right: 10px
}

@media(min-width:855px) {
  .navbar-expand-custom {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-flow: row nowrap;
    flex-flow: row nowrap;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start
  }
  .navbar-expand-custom .navbar-nav {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row
  }
  .navbar-expand-custom .navbar-nav .nav-link {
    padding-right: .5rem;
    padding-left: .5rem
  }
  .navbar-expand-custom .navbar-collapse {
    display: -webkit-box !important;
    display: -ms-flexbox !important;
    display: flex !important;
    -ms-flex-preferred-size: auto;
    flex-basis: auto
  }
  .navbar-expand-custom .navbar-toggler {
    display: none
  }
  .navbar-expand-custom .navbar-nav .dropdown-menu {
    position: absolute
  }
  .search-bar {
    margin: 0
  }
}

@media(max-width:854px) {
  .close {
    top: 75px;
  }
}

@media(max-width:359px) {
  .search-bar {
    margin-bottom: 2.7rem
  }
}

